--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Needed for proper Sonar analysis
+          fetch-depth: 0
 
       # 2) Setup Python
       - name: Setup Python
@@ -25,13 +25,13 @@ jobs:
         with:
           python-version: "3.10"
 
-      # 3) Install dependencies (optional)
+      # 3) Install dependencies (if you have any)
       - name: Install Dependencies
         run: |
           pip install -r requirements.txt || true
           pip install coverage
 
-      # 4) Run unit tests (discover tests in current directory)
+      # 4) Run unit tests and generate coverage
       - name: Run Unit Tests
         run: |
           coverage run -m unittest discover -s . -p "test_*.py"
