--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,17 +18,31 @@ jobs:
         with:
           fetch-depth: 0   # Required for SonarQube scan
 
-      # Step 2: Run Unit Tests with Coverage
+      # Step 2: Setup Python
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
+      # Step 3: Install dependencies
+      - name: Install Dependencies
+        run: |
+          pip install coverage
+
+      # Step 4: Run Unit Tests with Coverage
       - name: Run Unit Tests with Coverage
         run: |
-          pip install pytest flask pytest-cov
-          python -m pytest src/test_main.py --cov=. --cov-report xml:coverage.xml
+          coverage run -m unittest discover -s src -p "test_*.py"
+          coverage xml
 
-      # Step 3: SonarQube Scan
+      # Step 5: SonarQube Scan
       - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v2
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        uses: SonarSource/sonarqube-scan-action@v6
         with:
           args: >
+            -Dsonar.projectKey=navyavelicheti10_PythonScript
+            -Dsonar.organization=navyavelicheti10
+            -Dsonar.sources=src
             -Dsonar.python.coverage.reportPaths=coverage.xml
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
