--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,48 +9,37 @@ on:
 
 jobs:
   build-and-scan:
-    name: Build + Test + SonarQube + ZAP
+    name: Build + Test + SonarCloud + ZAP
     runs-on: ubuntu-latest
-    services:
-      app:
-        image: python:3.10-slim
-        ports:
-          - 8000:8000
-        options: >-
-          --health-cmd "curl --fail http://localhost:8000 || exit 1"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        volumes:
-          - ./:/app
-        env:
-          PYTHONPATH: /app/src
-        command: bash -c "pip install -r requirements.txt && python src/main.py"
 
     steps:
-      # 1) Checkout code
+      # Step 1: Checkout repository
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      # 2) Setup Python (for running tests and coverage)
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      # Step 2: Setup Python
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.10"
 
-      # 3) Install dependencies for testing
-      - name: Install Dependencies
-        run: |
-          pip install coverage requests
+      # Step 3: Install dependencies
+      - run: |
+          pip install coverage flask requests
 
-      # 4) Run Unit Tests with Coverage
+      # Step 4: Run Unit Tests with Coverage
       - name: Run Unit Tests
         run: |
           coverage run -m unittest discover -s src -p "test_*.py"
           coverage xml
 
-      # 5) SonarQube Scan
+      # Step 5: Start the Python app in the background
+      - name: Start App
+        run: |
+          nohup python src/main.py &
+          sleep 5  # wait for the app to start
+
+      # Step 6: SonarCloud Scan
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v6
         with:
@@ -62,11 +51,10 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-      # 6) OWASP ZAP DAST Scan
+      # Step 7: OWASP ZAP DAST Scan
       - name: OWASP ZAP Scan
         uses: zaproxy/action-full-scan@v0.8.0
         with:
           target: 'http://localhost:8000'
           format: 'xml'
           output: 'zap-report.xml'
-          cmd_options: '-t http://localhost:8000'
