--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,36 +32,38 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          pip install flask coverage requests
+          pip install flask coverage
 
       - name: Run Unit Tests
         run: |
           coverage run -m unittest discover -s src -p "test_*.py"
           coverage xml
 
-      - name: Start Flask App
+      - name: Start App (Port 8000)
         run: |
           nohup python src/main.py > app.log 2>&1 &
           sleep 5
 
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v6
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           args: >
             -Dsonar.projectKey=navyavelicheti10_PythonScript
             -Dsonar.organization=navyavelicheti10
             -Dsonar.sources=src
             -Dsonar.python.coverage.reportPaths=coverage.xml
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       - name: OWASP ZAP Scan
         uses: zaproxy/action-full-scan@v0.8.0
         with:
           target: "http://localhost:8000"
-          output: "zap-report.html"
-          format: "html"
+          output: zap-report.html
+          format: html
 
       - name: Upload ZAP Report
         uses: actions/upload-artifact@v4
         with:
+          name: zap-report
+          path: zap-report.html
